# Video2Frames

./: .gitignore  README.md  启动工具.bat
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  exports.py  processing.py  projects.py  routes.py
backend/app/core/: models.py  paths.py  project_store.py
backend/app/services/: __init__.py  bounds.py  chroma_key.py  frame_extract.py  keying.py  project_processing.py  refine_masks.py  sheet_export.py  video_probe.py
backend/tests/: conftest.py  test_api.py  test_bounds.py  test_chroma_key.py  test_frame_extract.py  test_project_store.py  test_refine_masks.py  test_sheet_export.py  test_video_probe.py
docs/superpowers/plans/: 2026-06-04-spritesheet-tool-mvp.md
docs/superpowers/specs/: 2026-06-04-spritesheet-tool-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: ExportPanel.tsx  FrameTimeline.tsx  ImportPanel.tsx  ProjectPanel.tsx  RefineEditor.tsx
frontend/src/tests/: canvasTools.test.ts  exportPanel.test.ts  floodFill.test.ts  refinePreview.test.ts
frontend/src/utils/: canvasTools.ts  floodFill.ts  playback.test.ts  playback.ts  previewBackground.test.ts  previewBackground.ts  refinePreview.ts  videoFiles.test.ts  videoFiles.ts
scripts/: Create-DesktopShortcut.ps1  Start-SpritesheetTool.ps1
