[project]
name = "spritesheet-tool-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pillow>=11.0",
  "numpy>=2.2",
  "opencv-python>=4.10",
  "imageio-ffmpeg>=0.6",
  "pydantic>=2.10"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
